# expenses_control

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  README.txt  docker-compose.yml  gunicorn.conf.py  pyproject.toml
app/: __init__.py
app/api/: __init__.py  categories.py  items.py  products.py  purchase.py  register.py  responses.py  search.py
app/cli/: __init__.py  categories.py  database.py  items.py  products.py  purchases.py
app/models/: __init__.py  item.py  payloads.py  payment_method.py  product.py  store.py
app/services/: purchase_service.py
app/services/database/: __init__.py  db.py
app/templates/: base.html  catalog.html  items_manage.html  items_report.html  purchases_manage.html  register.html  search.html
app/utils/exceptions/: custom_exceptions.py
app/utils/logs/: __init__.py
app/utils/models/: __init__.py  item.py  payloads.py  product.py  store.py
app/views/: register.py
scripts/: migrate_payment_methods.py  migrate_purchase_date.py
tests/: test_api_baseline.py
