[project]
name = "expenses-control"
version = "0.1.0"
description = "Rest API to registry and visualization of domestic expenses"
authors = [
    {name = "paulocesarvasco",email = "paulocvasco.93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
